src/tests/code/pass/pass_operator_combined_assignment_mod.u
entrypoint: ~()->(iErrorCode:~i64{63})
{
	iErrorCode%=5;
}