src/tests/code/fail/fail_int_initialization_list_too_long.u
entrypoint:~()->(i64{27,99})